[package]
name = "cpi-swap-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
sha2 = "0.10.8"
solana-client = "2.1.13"
solana-sdk = "2.1.13"
tokio = "1.43.0"
jup-swap = { git = "https://github.com/jup-ag/jupiter-swap-api-client", package = 'jupiter-swap-api-client', branch = '2.1' }
spl-token = "7.0.0"
spl-associated-token-account = "6.0.0"
